# synergy-rust

./: .gitignore  Cargo.toml  README.md
src/: config.rs  environment.rs  event.rs  hub.rs  logger.rs  main.rs  message.rs  user.rs  user_directory.rs
src/channel/: mod.rs  slack.rs  term.rs
src/channel/slack/: api_client.rs  client.rs  rtm_client.rs
src/reactor/: clox.rs  echo.rs  mod.rs
src/synergy/: hub.rs  mod.rs
src/synergy/channel/: slack.rs
