[package]
name = "synergy-rust"
version = "0.1.0"
authors = ["Michael McClimon <michael@mcclimon.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rusqlite = "0.22.0"
serde = { version = "1.0.106", features = [ "derive" ] }
serde_json = "1.0.51"
toml = "0.5.6"
tungstenite = "0.10.1"
