[package]
name = "synergy-rust"
version = "0.1.0"
authors = ["Michael McClimon <michael@mcclimon.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
colorful = "0.2.1"
env_logger = "0.7.1"
getopts = "0.2.21"  # I think eventually I want to use clap, but this is ok for now
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rusqlite = "0.22.0"
serde = { version = "1.0.106", features = [ "derive" ] }
serde_json = "1.0.51"
toml = "0.5.6"
tungstenite = "0.10.1"
